--- a/CPU/CPU/CPU.qsf
+++ b/CPU/CPU/CPU.qsf
@@ -67,4 +67,11 @@ set_global_assignment -name VHDL_FILE CPU.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE Testbench.vhd
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH Testbench -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME Testbench -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Testbench
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Testbench -section_id Testbench
+set_global_assignment -name EDA_TEST_BENCH_FILE Testbench.vhd -section_id Testbench
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
