--- a/CPU/CPU.qsf
+++ b/CPU/CPU.qsf
@@ -74,4 +74,5 @@ set_global_assignment -name EDA_TEST_BENCH_NAME Testbench -section_id eda_simula
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Testbench -section_id Testbench
 set_global_assignment -name EDA_TEST_BENCH_FILE Testbench.vhd -section_id Testbench
+set_global_assignment -name VHDL_FILE Left_Shifter_2Mul.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
